# freecut

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  electron-builder.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  skills-lock.json  vite.config.ts  vite.electron.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
backend/: freecut-backend.spec  main.py  pyproject.toml
docs/: index.html  netlify.toml  package-lock.json  package.json  source.config.ts  tsconfig.json  vite.config.ts
docs/plans/: 2026-01-22-webgpu-phase4-media-layer.md
docs/src/: App.tsx  index.css
e2e/: backend-media-processing.spec.ts  editor.spec.ts  export-duration-regression.spec.ts  export-gpu.spec.ts  landing-page.spec.ts  navigation.spec.ts  new-project.spec.ts  projects-page.spec.ts  settings.spec.ts
electron/: main.cjs  main.ts  preload.cjs  preload.ts  updater.cjs  wait-and-launch.cjs
scripts/: sync-skills.sh
server/: types.ts
server/routes/: render.ts
server/services/: render-service.ts
skills/local-security-audit/: SKILL.md
src/: app.tsx  index.css  main.tsx  routeTree.gen.ts
src/api/: render.ts
src/components/: about-dialog.tsx  app-header.tsx
src/config/: hotkeys.ts
src/features/: api.ts
src/hooks/: use-editor-hotkeys.ts  use-marquee-selection.ts
src/lib/: api.ts  blob-url-manager.ts  logger.ts
src/routes/: __root.tsx  about.tsx  index.tsx  settings.tsx
src/test/: setup.ts
src/types/: effects.ts  electron-updater.ts  export.ts  keyframe.ts  project.ts  storage.ts  timeline.ts  (+1 more)
(+398 files in other folders)
